# ayanam

./: .gitignore
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_clients_birth_data.py  0c622085f1c3_seed_plan_features.py
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: exceptions.py  middleware.py  security.py
backend/app/engine/: __init__.py  calculator.py  constants.py  dasha.py  ephemeris.py  houses.py  nakshatras.py  planets.py  significators.py  sublords.py
backend/app/models/: __init__.py  audit_log.py  base.py  chart.py  client.py  subscription.py  tenant.py  user.py
backend/app/routers/: auth.py  charts.py  clients.py
backend/app/schemas/: auth.py  chart.py  client.py  common.py
backend/app/services/: chart_service.py
backend/app/tasks/: celery_app.py
backend/docker/: Dockerfile  docker-compose.yml
backend/scripts/: generate_keys.py  update_plan_features.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py
backend/tests/test_engine/: test_constants.py  test_dasha.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.js
frontend/app/[lang]/: layout.js  page.js
frontend/components/ui/: sidebar.jsx
frontend/dictionaries/: en.json  ta.json
frontend/i18n/: config.js  get-dictionary.js
frontend/lib/api/: auth.js  charts.js  client.js
frontend/shared/ui/: astro-symbol.jsx  brand-mark.jsx  constellation-bg.jsx  starfield.jsx
frontend/shared/utils/: i18n.js
web/: package-lock.json  package.json
web/api-spec/: astro.json
web/src/app/: layout.tsx
web/src/providers/: app-providers.tsx  boot-auth.tsx  i18n-provider.tsx  query-provider.tsx
(+39 files in other folders)
